--- a/ProjetoIntegradorFarmacia.csproj
+++ b/ProjetoIntegradorFarmacia.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entidade\AcessoBancoDeDados.cs" />
+    <Compile Include="Entidade\EntidadeCliente.cs" />
     <Compile Include="Entidade\Globais.cs" />
     <Compile Include="Entidade\EntidadeUsuario.cs" />
     <Compile Include="Telas\TelaCadastroUsuario.cs">
