--- a/ProjetoIntegradorFarmacia.csproj
+++ b/ProjetoIntegradorFarmacia.csproj
@@ -70,8 +70,10 @@
     <Compile Include="Entidade\AcessoBancoDeDados.cs" />
     <Compile Include="Entidade\EntidadeCliente.cs" />
     <Compile Include="Entidade\EntidadeFornecedor.cs" />
+    <Compile Include="Entidade\EntidadeProduto.cs" />
     <Compile Include="Entidade\Globais.cs" />
     <Compile Include="Entidade\EntidadeUsuario.cs" />
+    <Compile Include="Entidade\EntidadeVenda.cs" />
     <Compile Include="Telas\TelaCadastroUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
