--- a/packages.config
+++ b/packages.config
@@ -11,7 +11,9 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="7.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net472" />
-  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="2.3.2" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.WebForms" version="150.1586.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="160.1000.6" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.118.0" targetFramework="net472" />
